--- a/gxbdev/GxMainWindow.ui
+++ b/gxbdev/GxMainWindow.ui
@@ -146,6 +146,24 @@
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="GxProjectTree" name="projtree">
+       <property name="contextMenuPolicy">
+        <enum>Qt::CustomContextMenu</enum>
+       </property>
+       <property name="uniformRowHeights">
+        <bool>true</bool>
+       </property>
+       <property name="animated">
+        <bool>true</bool>
+       </property>
+       <property name="headerHidden">
+        <bool>true</bool>
+       </property>
+       <attribute name="headerVisible">
+        <bool>false</bool>
+       </attribute>
+       <attribute name="headerHighlightSections">
+        <bool>false</bool>
+       </attribute>
        <column>
         <property name="text">
          <string notr="true">Project Item</string>
@@ -208,7 +226,9 @@ color: rgb(213, 213, 213);</string>
   </widget>
   <action name="actionAbout">
    <property name="icon">
-    <iconset theme="help-about"/>
+    <iconset theme="help-about">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>About</string>
@@ -219,7 +239,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionNew_Project">
    <property name="icon">
-    <iconset theme="document-new"/>
+    <iconset theme="document-new">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>New Project...</string>
@@ -227,7 +249,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionAdd_New_Item">
    <property name="icon">
-    <iconset theme="project-development-new-template"/>
+    <iconset theme="project-development-new-template">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Add New Item</string>
@@ -235,7 +259,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionAdd_Existing_Item">
    <property name="icon">
-    <iconset theme="document-open"/>
+    <iconset theme="document-open">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Add Existing Item</string>
@@ -243,7 +269,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionClose">
    <property name="icon">
-    <iconset theme="document-close"/>
+    <iconset theme="document-close">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -251,7 +279,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionCut">
    <property name="icon">
-    <iconset theme="edit-cut"/>
+    <iconset theme="edit-cut">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Cut</string>
@@ -259,7 +289,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset theme="edit-copy"/>
+    <iconset theme="edit-copy">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Copy</string>
@@ -267,7 +299,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionPaste">
    <property name="icon">
-    <iconset theme="edit-paste"/>
+    <iconset theme="edit-paste">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Paste</string>
@@ -275,7 +309,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionClear">
    <property name="icon">
-    <iconset theme="edit-clear"/>
+    <iconset theme="edit-clear">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Clear</string>
@@ -283,7 +319,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionRefresh">
    <property name="icon">
-    <iconset theme="reload"/>
+    <iconset theme="reload">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Refresh</string>
@@ -291,7 +329,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionConfiguration">
    <property name="icon">
-    <iconset theme="configure"/>
+    <iconset theme="configure">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Configuration</string>
@@ -299,7 +339,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionClose_2">
    <property name="icon">
-    <iconset theme="document-close"/>
+    <iconset theme="document-close">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Close</string>
@@ -307,7 +349,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionClose_All">
    <property name="icon">
-    <iconset theme="project-development-close-all"/>
+    <iconset theme="project-development-close-all">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Close All</string>
@@ -315,7 +359,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionClose_Project">
    <property name="icon">
-    <iconset theme="project-development-close"/>
+    <iconset theme="project-development-close">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Close Project</string>
@@ -323,7 +369,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionExit">
    <property name="icon">
-    <iconset theme="application-exit"/>
+    <iconset theme="application-exit">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Exit</string>
@@ -331,7 +379,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionStart">
    <property name="icon">
-    <iconset theme="debug-run"/>
+    <iconset theme="debug-run">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Start</string>
@@ -339,7 +389,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionTrace">
    <property name="icon">
-    <iconset theme="debug-step-into"/>
+    <iconset theme="debug-step-into">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Trace</string>
@@ -347,7 +399,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionTest_Current_Script">
    <property name="icon">
-    <iconset theme="quickopen"/>
+    <iconset theme="quickopen">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Test Script</string>
@@ -355,7 +409,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionTest_Current_Function">
    <property name="icon">
-    <iconset theme="quickopen-function"/>
+    <iconset theme="quickopen-function">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Test Function</string>
@@ -363,7 +419,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionTest_Block">
    <property name="icon">
-    <iconset theme="quickopen-class"/>
+    <iconset theme="quickopen-class">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Test Block</string>
@@ -371,7 +429,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionTest_Selection">
    <property name="icon">
-    <iconset theme="quickopen-file"/>
+    <iconset theme="quickopen-file">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Test Selection</string>
@@ -379,7 +439,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionStop">
    <property name="icon">
-    <iconset theme="process-stop"/>
+    <iconset theme="process-stop">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>All Stop</string>
@@ -387,7 +449,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionSave_Project">
    <property name="icon">
-    <iconset theme="document-save"/>
+    <iconset theme="document-save">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Save Project</string>
@@ -395,7 +459,9 @@ color: rgb(213, 213, 213);</string>
   </action>
   <action name="actionSave_Project_As">
    <property name="icon">
-    <iconset theme="document-save-as"/>
+    <iconset theme="document-save-as">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Save Project As...</string>
@@ -406,7 +472,9 @@ color: rgb(213, 213, 213);</string>
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset theme="document-save"/>
+    <iconset theme="document-save">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Save Active Document</string>
@@ -417,10 +485,47 @@ color: rgb(213, 213, 213);</string>
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset theme="document-save-as"/>
+    <iconset theme="document-save-as">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Save Active Document As...</string>
+   </property>
+  </action>
+  <action name="actionSet_Active">
+   <property name="text">
+    <string>Set Active</string>
+   </property>
+  </action>
+  <action name="actionUnload">
+   <property name="text">
+    <string>Unload</string>
+   </property>
+  </action>
+  <action name="actionDelete">
+   <property name="text">
+    <string>Delete</string>
+   </property>
+  </action>
+  <action name="actionReload">
+   <property name="text">
+    <string>Reload</string>
+   </property>
+  </action>
+  <action name="actionSave">
+   <property name="text">
+    <string>Save</string>
+   </property>
+  </action>
+  <action name="actionSave_As">
+   <property name="text">
+    <string>Save As...</string>
+   </property>
+  </action>
+  <action name="actionSave_All">
+   <property name="text">
+    <string>Save All</string>
    </property>
   </action>
  </widget>
