--- a/gxbdev/GxMainWindow.ui
+++ b/gxbdev/GxMainWindow.ui
@@ -16,7 +16,51 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QMdiArea" name="mdiArea"/>
+     <widget class="QWidget" name="widget" native="true">
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 3px solid; border-radius: 8px; background-color: gray;
+border-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.122905 rgba(255, 255, 255, 255), stop:0.486034 rgba(109, 109, 109, 255), stop:1 rgba(0, 0, 0, 255));</string>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_5">
+       <item>
+        <widget class="QMdiArea" name="mdiArea">
+         <property name="autoFillBackground">
+          <bool>false</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">border: none;</string>
+         </property>
+         <property name="background">
+          <brush brushstyle="SolidPattern">
+           <color alpha="255">
+            <red>92</red>
+            <green>92</green>
+            <blue>92</blue>
+           </color>
+          </brush>
+         </property>
+         <property name="activationOrder">
+          <enum>QMdiArea::ActivationHistoryOrder</enum>
+         </property>
+         <property name="viewMode">
+          <enum>QMdiArea::TabbedView</enum>
+         </property>
+         <property name="tabsClosable">
+          <bool>true</bool>
+         </property>
+         <property name="tabsMovable">
+          <bool>true</bool>
+         </property>
+         <property name="tabPosition">
+          <enum>QTabWidget::South</enum>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </item>
    </layout>
   </widget>
